@@ -646,6 +646,9 @@ AC_SUBST(LOCALEDIR)
 RPMCONFIGDIR="`echo ${prefix}/lib/rpm`"
 AC_DEFINE_UNQUOTED(RPMCONFIGDIR, "$RPMCONFIGDIR")
 AC_SUBST(RPMCONFIGDIR)
+SYSCONFIGDIR="`echo /etc/rpm`"
+AC_DEFINE_UNQUOTED(SYSCONFIGDIR, "$SYSCONFIGDIR")
+AC_SUBST(SYSCONFIGDIR)
 LIBRPMRC_FILENAME="${RPMCONFIGDIR}/rpmrc"
 AC_DEFINE_UNQUOTED(LIBRPMRC_FILENAME, "$LIBRPMRC_FILENAME")
 AC_SUBST(LIBRPMRC_FILENAME)
@@ -693,3 +696,4 @@ AC_OUTPUT([Makefile rpmrc macros lib/Makefile
 	misc/Makefile po/Makefile.in intl/Makefile],
 	[touch Makefile.in
 	sed -e "/POTFILES =/r po/POTFILES" po/Makefile.in > po/Makefile])
+
