@@ -14,6 +14,7 @@
 #endif
 
 #include "rpmlib.h"
+#include "rpmmacro.h"	/* XXX for rpmGetPath */
 
 #include "md5.h"
 #include "misc.h"
